[aquatemp] fix discovery
Signed-off-by: Ronny Grun <ronny.grun@t-online.de>